// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Paragraph /> > should render 1`] = `
<p
  data-astro-cid-ho6gvodc=""
  style="grid-column-start:3;--marginBottom: 1rem;--marginTop: 1rem;"
>
   Test content for the paragraph. 
</p>
`;

exports[`<Paragraph /> > should render without grid 1`] = `
<p
  data-astro-cid-ho6gvodc=""
  style=";--marginBottom: 1rem;--marginTop: 1rem;"
>
   Test content for the paragraph. 
</p>
`;
